feat: add LoginForm component

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,7 +28,10 @@
     "noImplicitThis": true,
     "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
 
   },
   "include": ["src"]
